--- a/blog/package.json
+++ b/blog/package.json
@@ -17,7 +17,8 @@
     "underscore": "^1.8.3",
     "vue": "^2.2.6",
     "vue-material": "^0.7.1",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
