--- a/blog/package.json
+++ b/blog/package.json
@@ -18,6 +18,7 @@
     "babel-runtime": "^6.23.0",
     "underscore": "^1.8.3",
     "vue": "^2.2.6",
+    "vue-awesome": "^2.3.1",
     "vue-material": "^0.7.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
