--- a/blog/package.json
+++ b/blog/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "jade": "^1.11.0",
     "json-loader": "^0.5.4",
     "json-server": "^0.10.0",
     "karma": "^1.4.1",
