--- a/project/package.json
+++ b/project/package.json
@@ -14,8 +14,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-vue": "^0.15.8",
+    "moment": "^2.18.1",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-axios": "^2.0.2",
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
