--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,7 @@
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.2.6",
     "vue-axios": "^2.0.2",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
