--- a/project/package.json
+++ b/project/package.json
@@ -14,10 +14,27 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.11.0-beta",
+    "autoprefixer": "^6.7.7",
     "axios": "^0.16.1",
+    "bcrypt": "^1.0.2",
     "bootstrap": "^3.3.7",
     "bootstrap-vue": "^0.15.8",
+    "connect-history-api-fallback": "^1.3.0",
+    "cors": "^2.8.3",
+    "file-loader": "^0.11.1",
+    "function-bind": "^1.1.0",
+    "jsonwebtoken": "^7.4.0",
+    "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
+    "nodemailer": "^4.0.1",
+    "opn": "^4.0.2",
+    "ora": "^1.2.0",
+    "pg": "^6.2.2",
+    "randomstring": "^1.1.5",
+    "sequelize": "^3.30.4",
+    "shelljs": "^0.7.7",
+    "url-loader": "^0.5.8",
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.2.6",
     "vue-axios": "^2.0.2",
