--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
     "bootstrap-vue": "^0.15.8",
     "connect-history-api-fallback": "^1.3.0",
     "cors": "^2.8.3",
+    "dropzone": "^4.3.0",
     "file-loader": "^0.11.1",
     "function-bind": "^1.1.0",
     "jsonwebtoken": "^7.4.0",
